[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/label_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://game-over.gd" type="Script" id=2]
[ext_resource path="res://assets/FutilePro.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0.698039, 0.176471, 0.176471, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 29
outline_color = Color( 0.211765, 0.631373, 0.137255, 1 )
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 712.0
color = Color( 0, 0, 0, 0.396078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText" type="Label" parent="."]
margin_left = 240.0
margin_top = 144.0
margin_right = 408.0
margin_bottom = 172.0
rect_scale = Vector2( 3.28, 3.28 )
custom_fonts/font = ExtResource( 1 )
text = "Game over!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="."]
margin_left = 320.0
margin_top = 296.0
margin_right = 420.0
margin_bottom = 324.0
rect_scale = Vector2( 1.92, 1.92 )
custom_fonts/font = ExtResource( 1 )
text = "Score:"

[node name="ScoreValue" type="Label" parent="."]
margin_left = 544.0
margin_top = 296.0
margin_right = 644.0
margin_bottom = 324.0
rect_scale = Vector2( 1.92, 1.92 )
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreText" type="Label" parent="."]
margin_left = 184.0
margin_top = 384.0
margin_right = 358.0
margin_bottom = 412.0
rect_scale = Vector2( 1.92, 1.92 )
custom_fonts/font = SubResource( 2 )
text = "High Score:"

[node name="HighScoreValue" type="Label" parent="."]
margin_left = 544.0
margin_top = 384.0
margin_right = 644.0
margin_bottom = 412.0
rect_scale = Vector2( 1.92, 1.92 )
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewHighScoreValue" type="Label" parent="."]
margin_left = 712.0
margin_top = 384.0
margin_right = 812.0
margin_bottom = 412.0
rect_scale = Vector2( 1.92, 1.92 )
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 320.0
margin_top = 544.0
margin_right = 704.0
margin_bottom = 612.0
custom_fonts/font = SubResource( 1 )
text = "Play Again?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
